--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,31 @@
 # Environment
-ENV=development  # development|production|testing
+ENV=development  # development|production
 
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
-API_WORKERS=4
-API_RELOAD=true  # Only for development
 
-# Database Configuration
-DATABASE_URL=postgresql+asyncpg://dev:devpass123@localhost:5432/music2notes
-DATABASE_POOL_SIZE=10
-DATABASE_MAX_OVERFLOW=20
+# Database (SQLite - zero cost, no external server needed)
+DATABASE_URL=sqlite+aiosqlite:///data/music2notes.db
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379/0
-REDIS_MAX_CONNECTIONS=50
-
-# Celery Configuration
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/1
-CELERY_WORKER_CONCURRENCY=2
-CELERY_TASK_TIME_LIMIT=3600  # 1 hour in seconds
-CELERY_TASK_SOFT_TIME_LIMIT=3300  # 55 minutes in seconds
-
-# Storage Configuration
-STORAGE_TYPE=local  # local|s3
+# Storage
 STORAGE_PATH=./storage
-# For S3:
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_S3_BUCKET=
-# AWS_S3_REGION=us-east-1
 
-# Audio Processing Configuration
-DEFAULT_MODEL_SIZE=medium  # tiny|small|medium|large|full
-DEFAULT_CONFIDENCE_THRESHOLD=0.5
-DEFAULT_MIN_NOTE_DURATION=0.1
+# Audio Processing
+DEFAULT_MODEL_SIZE=tiny  # tiny|full (tiny: fast, full: precise but slow)
+DEFAULT_CONFIDENCE_THRESHOLD=0.95  # CREPE model confidence (0.0-1.0)
+DEFAULT_MIN_NOTE_DURATION=0.05  # Minimum note duration in seconds
 MAX_AUDIO_FILE_SIZE=104857600  # 100MB in bytes
 MAX_AUDIO_DURATION=600  # 10 minutes in seconds
 
-# Webhook Configuration
+# Webhooks
 WEBHOOK_TIMEOUT=30  # seconds
 WEBHOOK_MAX_RETRIES=5
 WEBHOOK_SECRET_KEY=your-secret-key-change-this-in-production
 
-# Logging Configuration
-LOG_LEVEL=INFO  # DEBUG|INFO|WARNING|ERROR|CRITICAL
-LOG_FORMAT=json  # json|console
-
 # Security
 SECRET_KEY=your-super-secret-key-change-this-in-production
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+CORS_ORIGINS=*  # Comma separated origins for production
 
-# Monitoring (Optional)
-SENTRY_DSN=  # Add your Sentry DSN here
-PROMETHEUS_ENABLED=true
-
-# Rate Limiting
-RATE_LIMIT_PER_MINUTE=60
-RATE_LIMIT_PER_HOUR=1000
+# Logging
+LOG_LEVEL=INFO  # DEBUG|INFO|WARNING|ERROR|CRITICAL
