--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,20 +25,14 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
 
-    # Async Job Queue
-    "celery>=5.3.0",
-    "redis>=5.0.0",
-
-    # Database
+    # Database (SQLite async)
     "sqlalchemy>=2.0.0",
-    "asyncpg>=0.29.0",
-    "alembic>=1.12.0",
-    "psycopg2-binary>=2.9.9",
+    "aiosqlite>=0.19.0",
 
     # Audio Processing
     "librosa>=0.10.1",
-    "torchcrepe>=0.0.22",  # Modern CREPE implementation with PyTorch
-    "torch>=2.0.0",  # Required by torchcrepe
+    "torchcrepe>=0.0.22",
+    "torch>=2.0.0",
     "soundfile>=0.12.1",
     "numpy>=1.24.0,<2.0.0",
     "scipy>=1.11.0",
@@ -47,18 +41,12 @@ dependencies = [
 
     # MIDI Generation
     "mido>=1.3.0",
-    "pretty-midi>=0.2.10",
 
-    # HTTP Client & Webhooks
+    # HTTP Client (webhooks)
     "httpx>=0.25.0",
-    "tenacity>=8.2.0",
 
     # Storage & File I/O
     "aiofiles>=23.2.0",
-
-    # Logging & Monitoring
-    "structlog>=23.2.0",
-    "prometheus-client>=0.19.0",
 
     # Utilities
     "python-dotenv>=1.0.0",
@@ -71,20 +59,13 @@ dev = [
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
-    "httpx>=0.25.0",  # For testing FastAPI
-    "fakeredis>=2.20.0",
+    "httpx>=0.25.0",
 
     # Code Quality
     "black>=23.11.0",
     "ruff>=0.1.6",
     "mypy>=1.7.0",
     "pre-commit>=3.5.0",
-
-    # Type Stubs
-    "types-redis>=4.6.0",
-
-    # Load Testing
-    "locust>=2.20.0",
 ]
 
 [project.urls]
@@ -164,10 +145,8 @@ strict_optional = true
 [[tool.mypy.overrides]]
 module = [
     "librosa.*",
-    "crepe.*",
+    "torchcrepe.*",
     "mido.*",
-    "pretty_midi.*",
-    "celery.*",
 ]
 ignore_missing_imports = true
 
