--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ STORAGE_PATH=./storage
 
 # Audio Processing
 DEFAULT_MODEL_SIZE=tiny  # tiny|full (tiny: fast, full: precise but slow)
-DEFAULT_CONFIDENCE_THRESHOLD=0.95  # CREPE model confidence (0.0-1.0)
+DEFAULT_CONFIDENCE_THRESHOLD=0.85  # CREPE periodicity threshold (0.0-1.0)
 DEFAULT_MIN_NOTE_DURATION=0.05  # Minimum note duration in seconds
 MAX_AUDIO_FILE_SIZE=104857600  # 100MB in bytes
 MAX_AUDIO_DURATION=600  # 10 minutes in seconds
